@@ -1,3 +1,6 @@
+2017-07-13 (0.12.10)
+	COMMON: Fix potential infinite loop using the MAX command
+
 2017-06-08 (0.12.10)
 	COMMON: Now errors when using a keyword as part of a MAP variable
 
